--- a/Home_page.html
+++ b/Home_page.html
@@ -1,6 +1,21 @@
 <html>
     <head> <title> Home page</title>
-    <style></style>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #3498db; /* Change to blue color of your choice */
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        /* Header styles */
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+    </style>
 </head>
     <body>
 <h1> Computer Assignments</h1>
