--- a/Home_page.html
+++ b/Home_page.html
@@ -1,25 +1,16 @@
 <html>
     <head> <title> Home page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #3498db; /* Change to blue color of your choice */
-            line-height: 1.6;
-            padding: 20px;
-        }
-
-        /* Header styles */
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-    </style>
+        <link rel="stylesheet" href="Style_common_for_all.css">
 </head>
     <body>
 <h1> Computer Assignments</h1>
 <hr align="center" color="green">
-<a href="Day-1.html"> Day 1 </a>
+<a href="Day_1.html"> Day 1 : Details and Explanation of terms and terminologies of DBMS </a><br>
+<a href="Day_2.html"> Day 2 : Explanation about every key and normalization</a><br>
+<a href="Day_3.html"> Day 3 : Basic codes of MySQL(Create, DROP), their operation</a><br>
+<a href="Day_4.html"> Day 4 : </a><br>
+<a href="Day_5.html"> Day 5 : Steps of creating g-mail, github account etc.</a><br>
+<a href="Day_6.html"> Day 6 : Code and Output of Create, Drop, Alter, etc.</a><br>
+
     </body>
 </html>
