--- a/Day_4.html
+++ b/Day_4.html
@@ -1,3 +1,5 @@
 <html> 
-    <head> <title> </title></head>
+    <head> <title> </title>
+        <link rel="stylesheet" href="Style_common_for_all.css">
+        <a href="Home_page.html">Home</a></head>
 </html>
